--- a/conf/meph-v3.yaml
+++ b/conf/meph-v3.yaml
@@ -36,6 +36,7 @@ subarches:
  - &sa_hwe_gg       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10]
  - &sa_hwe_hh       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04]
  - &sa_hwe_ii       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10]
+ - &sa_hwe_jj       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04]
  - &arm_hwe_t       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t]
  - &arm_hwe_u       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u]
  - &arm_hwe_v       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v]
@@ -51,6 +52,7 @@ subarches:
  - &arm_hwe_gg      [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10]
  - &arm_hwe_hh      [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04]
  - &arm_hwe_ii      [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10]
+ - &arm_hwe_jj      [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04]
 
 misc:
  - &glpae generic-lpae
@@ -61,6 +63,20 @@ misc:
  - &kh-xgene   {suffix: .xgene, kihelper: "kh-xgene", di-format: 'xgene'}
 
 releases:
+ - version: "22.04"
+   release: jammy
+   kernels:
+    - [jammy,       amd64,    ga-22.04,        generic,     linux-generic,                        *sa_hwe_hh]
+    - [jammy,       amd64,    ga-22.04,        lowlatency,  linux-image-lowlatency,               *sa_hwe_hh]
+    - [jammy,       arm64,    ga-22.04,        generic,     linux-generic,                        *sa_hwe_hh]
+    - [jammy,       arm64,    *mustang,        generic,     linux-generic,                        [*mustang], *kh-mustang]
+    - [jammy,       arm64,    *xguboot,        generic,     linux-generic,                        [*xguboot], *kh-xgene]
+    - [jammy,       armhf,    *glpae,          *glpae,      linux-generic-lpae,                   [*glpae]]
+    - [jammy,       armhf,    ga-22.04,        generic,     linux-generic,                        *arm_hwe_hh]
+    - [jammy,       i386,     ga-22.04,        generic,     linux-generic,                        *sa_hwe_hh]
+    - [jammy,       i386,     ga-22.04,        lowlatency,  linux-image-lowlatency,               *sa_hwe_hh]
+    - [jammy,       ppc64el,  ga-22.04,        generic,     linux-generic,                        *sa_hwe_hh]
+    - [jammy,       s390x,    ga-22.04,        generic,     linux-generic,                        *sa_hwe_hh]
  - version: "21.10"
    release: impish
    kernels:
