--- a/conf/cpc-patch.yaml
+++ b/conf/cpc-patch.yaml
@@ -5,5 +5,30 @@
 # promote: True
 
 com.ubuntu.maas:v3:download.json:
-  com.ubuntu.maas:v3:boot:22.04:.*:
-    labels: {}
+  com.ubuntu.maas:v3:boot:22.04:amd64:ga-22.04:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:22.04:amd64:ga-22.04-lowlatency:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:22.04:arm64:ga-22.04:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:22.04:arm64:xgene-uboot:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:22.04:arm64:xgene-uboot-mustang:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:22.04:armhf:ga-22.04:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:22.04:armhf:generic-lpae-generic-lpae:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:22.04:ppc64el:ga-22.04:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:22.04:s390x:ga-22.04:
+    labels:
+    - candidate
