--- a/conf/bootloaders.yaml
+++ b/conf/bootloaders.yaml
@@ -29,7 +29,7 @@ bootloaders:
    release: focal
    os: grub-efi-signed
    files:
-    - usr/lib/shim/shimx64.efi.signed, bootx64.efi
+    - usr/lib/shim/shimx64.efi.signed.latest, bootx64.efi
     - usr/lib/grub/x86_64-efi-signed/grubnetx64.efi.signed, grubx64.efi
  - firmware-platform: uefi
    packages:
@@ -41,7 +41,7 @@ bootloaders:
    release: focal
    os: grub-efi
    files:
-    - usr/lib/shim/shimaa64.efi.signed, bootaa64.efi
+    - usr/lib/shim/shimaa64.efi.signed.latest, bootaa64.efi
     - usr/lib/grub/arm64-efi-signed/grubnetaa64.efi.signed, grubaa64.efi
  - firmware-platform: open-firmware
    packages:
