--- a/conf/meph-v3.yaml
+++ b/conf/meph-v3.yaml
@@ -40,6 +40,7 @@ subarches:
  - &sa_hwe_jj_edge  [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, hwe-18.10, hwe-19.04, hwe-19.10, hwe-20.04, hwe-22.04]
  - &sa_hwe_kk       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10]
  - &sa_hwe_ll       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10, ga-23.04]
+ - &sa_hwe_mm       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10, ga-23.04, ga-23.10]
  - &arm_hwe_t       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t]
  - &arm_hwe_u       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u]
  - &arm_hwe_v       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v]
@@ -59,6 +60,7 @@ subarches:
  - &arm_hwe_jj_edge [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, hwe-18.10, hwe-19.04, hwe-19.10, hwe-20.04, hwe-22.04]
  - &arm_hwe_kk      [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10]
  - &arm_hwe_ll      [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10, ga-23.04]
+ - &arm_hwe_mm      [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10, ga-23.04, ga-23.10]
 
 misc:
  - &glpae generic-lpae
@@ -69,6 +71,16 @@ misc:
  - &kh-xgene   {suffix: .xgene, kihelper: "kh-xgene", di-format: 'xgene'}
 
 releases:
+ - version: "23.10"
+   release: mantic
+   kernels:
+    - [mantic,       amd64,    ga-23.10,        generic,     linux-generic,                        *sa_hwe_mm]
+    - [mantic,       amd64,    ga-23.10,        lowlatency,  linux-image-lowlatency,               *sa_hwe_mm]
+    - [mantic,       arm64,    ga-23.10,        generic,     linux-generic,                        *sa_hwe_mm]
+    - [mantic,       armhf,    *glpae,          *glpae,      linux-generic-lpae,                   [*glpae]]
+    - [mantic,       armhf,    ga-23.10,        generic,     linux-generic,                        *arm_hwe_mm]
+    - [mantic,       ppc64el,  ga-23.10,        generic,     linux-generic,                        *sa_hwe_mm]
+    - [mantic,       s390x,    ga-23.10,        generic,     linux-generic,                        *sa_hwe_mm]
  - version: "23.04"
    release: lunar
    kernels:
