--- a/conf/bootloaders.yaml
+++ b/conf/bootloaders.yaml
@@ -9,7 +9,7 @@ bootloaders:
    arch: i386
    arches: i386,amd64
    archive: http://archive.ubuntu.com/ubuntu
-   release: focal
+   release: jammy
    # pxelinux and syslinux-common were accidentally removed from main. It has
    # been added back to main and is supported by foundations however because
    # there have been no updates its still in universe.
@@ -26,7 +26,7 @@ bootloaders:
    arch: amd64
    arches: amd64
    archive: http://archive.ubuntu.com/ubuntu
-   release: focal
+   release: jammy
    os: grub-efi-signed
    files:
     - usr/lib/shim/shimx64.efi.signed.latest, bootx64.efi
@@ -38,7 +38,7 @@ bootloaders:
    arch: arm64
    arches: arm64
    archive: http://ports.ubuntu.com
-   release: focal
+   release: jammy
    os: grub-efi
    files:
     - usr/lib/shim/shimaa64.efi.signed.latest, bootaa64.efi
