--- a/conf/cpc-patch.yaml
+++ b/conf/cpc-patch.yaml
@@ -228,7 +228,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -237,7 +237,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -246,7 +246,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -255,7 +255,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -264,7 +264,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -273,7 +273,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -282,7 +282,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -291,7 +291,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -300,7 +300,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -309,7 +309,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -318,7 +318,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -327,7 +327,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -336,7 +336,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -345,7 +345,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -354,7 +354,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -363,7 +363,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -372,7 +372,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -381,7 +381,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -390,7 +390,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -399,7 +399,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -408,7 +408,7 @@ com.ubuntu.maas:v3:download.json:
       candidate: '2025-05-29'
       stable: '2025-04-23'
     versions:
-      '20240101':
+      '20240118':
         labels:
         - candidate
         - stable
@@ -503,94 +503,209 @@ com.ubuntu.maas:v3:download.json:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:amd64:ga-22.04-lowlatency:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:amd64:hwe-22.04:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:amd64:hwe-22.04-edge:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:amd64:hwe-22.04-lowlatency:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:amd64:hwe-22.04-lowlatency-edge:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:arm64:ga-22.04:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:arm64:hwe-22.04:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:arm64:hwe-22.04-edge:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:arm64:hwe-22.04-lowlatency:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:arm64:hwe-22.04-lowlatency-edge:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:arm64:xgene-uboot:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:arm64:xgene-uboot-mustang:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:armhf:ga-22.04:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:armhf:generic-lpae-generic-lpae:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:armhf:hwe-22.04:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:armhf:hwe-22.04-edge:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:ppc64el:ga-22.04:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:ppc64el:hwe-22.04:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:ppc64el:hwe-22.04-edge:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:s390x:ga-22.04:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:s390x:hwe-22.04:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.04:s390x:hwe-22.04-edge:
     support_eol:
       candidate: '2027-06-01'
       stable: '2027-04-21'
+    versions:
+      '20231104':
+        labels:
+        - candidate
+        - stable
   com.ubuntu.maas:v3:boot:22.10:amd64:ga-22.10:
     versions:
       '20230325':
@@ -642,6 +757,70 @@ com.ubuntu.maas:v3:download.json:
   com.ubuntu.maas:v3:boot:22.10:s390x:ga-22.10:
     versions:
       '20230325':
+        labels:
+        - candidate
+        - stable
+  com.ubuntu.maas:v3:boot:23.04:amd64:ga-23.04:
+    labels:
+    - candidate
+    - stable
+  com.ubuntu.maas:v3:boot:23.04:amd64:ga-23.04-lowlatency:
+    labels:
+    - candidate
+    - stable
+  com.ubuntu.maas:v3:boot:23.04:arm64:ga-23.04:
+    labels:
+    - candidate
+    - stable
+  com.ubuntu.maas:v3:boot:23.04:armhf:ga-23.04:
+    labels:
+    - candidate
+    - stable
+  com.ubuntu.maas:v3:boot:23.04:armhf:generic-lpae-generic-lpae:
+    labels:
+    - candidate
+    - stable
+  com.ubuntu.maas:v3:boot:23.04:ppc64el:ga-23.04:
+    labels:
+    - candidate
+    - stable
+  com.ubuntu.maas:v3:boot:23.04:s390x:ga-23.04:
+    labels:
+    - candidate
+    - stable
+  com.ubuntu.maas:v3:boot:23.10:amd64:ga-23.10:
+    versions:
+      '20240119':
+        labels:
+        - candidate
+        - stable
+  com.ubuntu.maas:v3:boot:23.10:amd64:ga-23.10-lowlatency:
+    versions:
+      '20240119':
+        labels:
+        - candidate
+        - stable
+  com.ubuntu.maas:v3:boot:23.10:arm64:ga-23.10:
+    versions:
+      '20240119':
+        labels:
+        - candidate
+        - stable
+  com.ubuntu.maas:v3:boot:23.10:armhf:ga-23.10:
+    versions:
+      '20240119':
+        labels:
+        - candidate
+        - stable
+  com.ubuntu.maas:v3:boot:23.10:ppc64el:ga-23.10:
+    versions:
+      '20240119':
+        labels:
+        - candidate
+        - stable
+  com.ubuntu.maas:v3:boot:23.10:s390x:ga-23.10:
+    versions:
+      '20240119':
         labels:
         - candidate
         - stable
