--- a/conf/cpc-patch.yaml
+++ b/conf/cpc-patch.yaml
@@ -756,3 +756,21 @@ com.ubuntu.maas:v3:download.json:
         labels:
         - candidate
         - stable
+  com.ubuntu.maas:v3:boot:24.04:amd64:ga-24.04:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:24.04:amd64:ga-24.04-lowlatency:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:24.04:arm64:ga-24.04:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:24.04:armhf:ga-24.04:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:24.04:ppc64el:ga-24.04:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:24.04:s390x:ga-24.04:
+    labels:
+    - candidate
