feat: Add config for Oracular 24.10
Note that this also drops armhf support which is no longer supported in 24.10 plus for any images.

--- a/conf/meph-v3.yaml
+++ b/conf/meph-v3.yaml
@@ -42,6 +42,7 @@ subarches:
  - &sa_hwe_ll       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10, ga-23.04]
  - &sa_hwe_mm       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10, ga-23.04, ga-23.10]
  - &sa_hwe_nn       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10, ga-23.04, ga-23.10, ga-24.04]
+ - &sa_hwe_oo       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10, ga-23.04, ga-23.10, ga-24.04, ga-24.10]
  - &arm_hwe_t       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t]
  - &arm_hwe_u       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u]
  - &arm_hwe_v       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v]
@@ -73,6 +74,14 @@ misc:
  - &kh-xgene   {suffix: .xgene, kihelper: "kh-xgene", di-format: 'xgene'}
 
 releases:
+ - version: "24.10"
+   release: oracular
+   kernels:
+    - [ oracular,    amd64,    ga-24.10,        generic,     linux-generic,                        *sa_hwe_oo ]
+    - [ oracular,    amd64,    ga-24.10,        lowlatency,  linux-image-lowlatency,               *sa_hwe_oo ]
+    - [ oracular,    arm64,    ga-24.10,        generic,     linux-generic,                        *sa_hwe_oo ]
+    - [ oracular,    ppc64el,  ga-24.10,        generic,     linux-generic,                        *sa_hwe_oo ]
+    - [ oracular,    s390x,    ga-24.10,        generic,     linux-generic,                        *sa_hwe_oo ]
  - version: "24.04"
    release: noble
    kernels:
